[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
py-modules = ['statcont']
packages = ['statcont']

[project]
name = "statcont"
dynamic = ['version', 'authors', 'dependencies', 'readme', 'description', 'requires-python', 'optional-dependencies', 'license']
