[metadata]
name = statcont
version = 0.0.dev
description = Statistical continuum level determination for line-rich sources
long_description = Statistical continuum level determination for line-rich sources
author = Alvaro Sanchez-Monge
author_email = betacygni@gmail.com
license = BSD
url = https://hera.ph1.uni-koeln.de/~sanchez/statcont
edit_on_github = False
github_project = radio-astro-tools/statcont
install_requires = astropy scipy

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 6.0
norecursedirs = build docs/_build 
testpaths = statcont docs
doctest_plus = enabled
astropy_header = true
text_file_format = rst
xfail_strict = true
remote_data_strict = true
addopts = --color=yes --doctest-rst --doctest-continue-on-failure
filterwarnings =
    error

[pycodestyle]

# E402 module level import not at top of file
# We need to ignore this as the .conf has to be set in the __init__.py
# before the modules are imported.
ignore = E402

# Excluding files that are directly copied from the package template or
# generated
exclude = _astropy_init.py,version.py

# E226 missing whitespace around operators
# E402 module level import not at top of file
# W503 line break before operator
# Stricter settings for people who use flake8 in their editors
[flake8]
max-line-length = 120
ignore = E226,E402,W503
exclude = _astropy_init.py,version.py

[coverage:run]
omit =
  statcont/*_init*
  statcont/**/tests/*
  statcont/*setup*
  statcont/version*
  */statcont/*_init*
  */statcont/**/tests/*
  */statcont/*setup*
  */statcont/version*

[entry_points]

[options]

python_requires = >=3.9

install_requires=
   numpy>=1.20
   astropy>=5.0
tests_require =
   pytest-doctestplus>=0.13
   pytest-astropy

[options.extras_require]
test=
   pytest-astropy
   matplotlib
   pytest-dependency
   pytest-rerunfailures
docs=
   matplotlib
   sphinx-astropy>=1.5
   scipy
